--- a/gcosmos/proto/buf.yaml
+++ b/gcosmos/proto/buf.yaml
@@ -1,1 +1,24 @@
 version: v1
+name: buf.build/rollchains/gordian
+deps:
+  - buf.build/cosmos/cosmos-proto
+  - buf.build/cosmos/gogo-proto
+  - buf.build/googleapis/googleapis
+  - buf.build/protocolbuffers/wellknowntypes:v23.4
+breaking:
+  use:
+    - FILE
+lint:
+  use:
+    - DEFAULT
+    - COMMENTS
+    - FILE_LOWER_SNAKE_CASE
+  except:
+    - UNARY_RPC
+    - COMMENT_FIELD
+    - SERVICE_SUFFIX
+    - PACKAGE_VERSION_SUFFIX
+    - RPC_REQUEST_STANDARD_NAME
+    - ENUM_NO_ALLOW_ALIAS
+  ignore:
+    - tendermint
